/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

apply(from = "$rootDir/versionsPlugin.gradle")
plugins {
    `java-library`
    `maven-publish`
    id("com.github.ben-manes.versions") version "0.52.0"
}

repositories {
    mavenLocal()
    maven {
        url = uri("https://repo.maven.apache.org/maven2/")
    }
}

sourceSets {
    getByName("test") {
        java {
            setSrcDirs(listOf("src/main/test")) // 替换为你的目录
        }
    }
}


dependencies {
    api(libs.bundles.depApi)
    compileOnly(libs.bundles.depCompileOnly)
    annotationProcessor(libs.bundles.depAnnotationProcessor)
}

group = "top.nserly"
version = "1.0-SNAPSHOT"
description = "PicturePlayer"
java.sourceCompatibility = JavaVersion.VERSION_21

publishing {
    publications.create<MavenPublication>("maven") {
        from(components["java"])
    }
}

tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"
}

tasks.withType<Javadoc> {
    options.encoding = "UTF-8"
}
